# homelab-cli

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release-plz.yml  release.yml
docker/: Dockerfile.node  compose.yaml  lab_key  lab_key.pub
docs/: building-a-rust-cli-like-uv.md  docker-lab-setup.md  docker-tailscale-simulation.md  releasing.md
src/: cli.rs  lib.rs  main.rs  tailscale.rs
src/commands/: devices.rs  exec.rs  mod.rs  port.rs  run.rs  sync.rs
test-app/: server.py
test-apps/: both-streams.sh  fail.sh  hello.py  hello.sh  large-output.sh  streaming.sh  watcher-test.sh
test-apps/api-server/: server.py
test-apps/fullstack-app/: server.py
test-apps/rpc-server/: server.py
test-apps/web-app/: server.py
tests/: docker_lab.rs  docker_lab_ports.rs  docker_lab_servers.rs
tests/common/: mod.rs
tests/fixtures/: tailscale_status.json
