[package]
name = "homelab"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
notify = "8"
notify-debouncer-mini = "0.5"
openssh = { version = "0.11", features = ["process-mux"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.18"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
libc = "0.2"
predicates = "3"
tempfile = "3"
